--- a/index.html
+++ b/index.html
@@ -289,11 +289,12 @@
   <!-- data 연결 -->
   <script src="./data/skilltxt.js"></script>
   <script src="./data//projectxt.js"></script>
+  <script src="./data/project_mywork.js"></script>
 
   <!-- js 연결 -->
-  <script src="./js/skill.js"></script>
-  <script src="./js/project.js"></script>
   <script src="./js/modal.js"></script>
   <script src="./js/scrollevent.js"></script>
+  <script src="./js/skill.js"></script>
+  <script src="./js/project.js"></script>
 </body>
 </html>
