Add doitex Page

--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
       <button type="button">닫기</button>
       <div class="prj_modal_cont">
         <div class="prj_modal_btnwrap">
-          <a href="#" title="기획서" class="prj_mod_btn_plan">(Figma) 기획서</a>
-          <a href="#" title="홈페이지" class="prj_mod_btn_link">홈페이지</a>
+          <a href="#" title="기획서" class="prj_mod_btn_plan" target="_blank">(Figma) 기획서</a>
+          <a href="#" title="홈페이지" class="prj_mod_btn_link"  target="_blank">홈페이지</a>
         </div>
         <div class="prj_modal_info"></div>
       </div>
